# SS2026

./: .gitignore  README.MD  inhalt.txt
03_tests_rahmen/: CMakeLists.txt  README.md  hysteresis_switch.cpp  hysteresis_switch.h  tst_hysteresis_switch.cpp
StoppUhr/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
